--- a/assets/templates/assets/assets.html
+++ b/assets/templates/assets/assets.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asset Tracker</title>
+{% extends 'base.html' %}
 
-    <style>
-        /* Style for the table */
-        table {
-            border-collapse: collapse; /* Merge the table borders */
-        }
-    
-        /* Style for the cells */
-        td, th {
-            border: 1px solid black; /* Add border to cells */
-        }
-    </style>
-</head>
-<body>
-    <table align="center">
+{% block content %}
+    <table border="1" align="center" margin-top="40px">
         <tr>
             <th>SL No</th>
             <th>Asset Type</th>
@@ -42,5 +25,4 @@
             </tr>
         {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
