login_view created

--- a/assets/templates/assets/assets.html
+++ b/assets/templates/assets/assets.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <table border="1" align="center" margin-top="40px">
+    <table border="1" align="center" margin-top="40px" style="border-collapse: collapse;">
         <tr>
             <th>SL No</th>
             <th>Asset Type</th>
