--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,9 +6,11 @@
           <li><a href="{% url 'assets' %}">Assets</a></li>
           
           {% if request.user.is_authenticated %}
+          <li>User: {{request.user.username}}</li>
           <li><a href="#">Logout</a></li>
           {% else %}
-          <li><a href="#">Login/Sign Up</a></li>
+          <li><a href="{% url 'login' %}">Login</a></li>
+          <li><a href="#">Sign Up</a></li>
           {% endif %}
           
         </ul>
