--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,10 +7,10 @@
           
           {% if request.user.is_authenticated %}
           <li>User: {{request.user.username}}</li>
-          <li><a href="#">Logout</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
           <li><a href="{% url 'login' %}">Login</a></li>
-          <li><a href="#">Sign Up</a></li>
+          <li><a href="#">SignUp</a></li>
           {% endif %}
           
         </ul>
