--- a/templates/login.html
+++ b/templates/login.html
@@ -1,41 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="auth">
-        <div class="card">
-        <form action="" method="POST" class="form auth__form">
+    <div>
+        <form action="" method="POST">
             {% csrf_token %}
-            <div class="form__field">
-            <label for="formInput#text">Username: </label>
-            <input
-                class="input input--text"
-                id="formInput#text"
-                type="text"
-                name="username"
-                placeholder="Enter your username..."
-            />
+            <div>
+                <label>Username: </label>
+                <input
+                    type="text"
+                    name="username"
+                    placeholder="Enter your username..."
+                />
             </div>
 
-            <!-- Input:Password -->
-            <div class="form__field">
-            <label for="formInput#password">Password: </label>
-            <input
-                class="input input--password"
-                id="formInput#passowrd"
-                type="password"
-                name="password"
-                placeholder="••••••••"
-            />
+            <div>
+                <label>Password: </label>
+                <input
+                    type="password"
+                    name="password"
+                    placeholder="••••••••"
+                />
             </div>
-            <div class="auth__actions">
-            <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
-            <a href="">Forget Password?</a>
+            <div>
+                <input type="submit" value="Log In" />
+                <a href="#">Forget Password?</a>
             </div>
         </form>
-        <div class="auth__alternative">
+        <div>
             <p>Don’t have an Account?</p>
-            <a href="#">Sign Up</a>
-        </div>
+            <a href="{% url 'signup' %}">Sign Up</a>
         </div>
     </div>
 
