--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
           <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
           <li><a href="{% url 'login' %}">Login</a></li>
-          <li><a href="#">SignUp</a></li>
+          <li><a href="{% url 'signup' %}">SignUp</a></li>
           {% endif %}
           
         </ul>
