--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,6 +7,7 @@
           
           {% if request.user.is_authenticated %}
           <li>User: {{request.user.username}}</li>
+          <li><a href="{% url 'account' %}">Account</a></li>
           <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
           <li><a href="{% url 'login' %}">Login</a></li>
