view created for creating assets

--- a/assets/templates/assets/assets.html
+++ b/assets/templates/assets/assets.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h2 style="text-align: center;"><u>Unassigned Assets</u></h2>
+    <p style="text-align: center; font-size:24px;"><a href="{% url 'add-asset' %}">Add Asset</a></p>
     <table border="1" align="center" margin-top="40px" style="border-collapse: collapse;">
         <tr>
             <th style="padding: 8px;">SL No</th>
